2007-02-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib/_AttributeType.py: Add WITNESS (used by GEDCOM parser to
	import textual event witness information
	* src/GrampsDbUtils/_GedcomParse.py: Support for some types of Witness
	data

2007-02-26  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: encode file name properly

2007-02-26  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/MarkupText.py: avoid creating empty elements in xml generator

2007-02-25  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_NoteTab.py: Import RelLib.

2007-02-25  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: attribution for icons
	* src/GrampsDbUtils/_GedcomParse.py: enhancements in parsing
	* src/GrampsDbUtils/_GedcomTokens.py: remove double AGNC
	* src/DataViews/__init__.py: Add NoteView
	* src/DataViews/_NoteView.py: Added
	* src/Config/_GrampsConfigKeys.py: Added new keys to handle note
	dialog width.
	* src/Editors/__init__.py: Add _EditNote.py
	* src/Editors/_EditNote.py: Added
	* src/DisplayTabs/_NoteTab.py: Updated to the new list format
	* src/GrampsWidgets.py: Add checkbox support
	* src/glade/gramps.glade: Added edit_note
	* data/gramps.schemas.in: new keys

2007-02-25  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: Fix index error

2007-02-25  Brian Matherly  <brian@gramps-project.org>
	* src/BaseDoc.py:
	* src/docgen/PSDrawDoc.py:
	* src/docgen/SvgDrawDoc.py:
	* src/docgen/PdfDoc.py:
	* src/docgen/OpenOfficeDoc.py:
	* src/docgen/GtkPrint.py:
	* src/docgen/LPRDoc.py:
	* src/docgen/ODFDoc.py:
	* src/plugins/AncestorChart2.py:
	* src/plugins/DescendChart.py:
	* src/plugins/StatisticsChart.py:
	* src/plugins/TimeLine.py:
	Remove height and width from GraphicsStyle

2007-02-25  Benny Malengier <bm@cage.ugent.be>
	* src/gramps_main.py: new icons, register them
	* src/DateEdit.py : use icon
	* src/PageView.py : use icon
	* src/DisplayTabs/_AddrEmbedList.py and